src/test/ui/issues/issue-53692.stderr
error[E0308]: mismatched types
  --> $DIR/issue-53692.rs:4:37
   |
LL |         let items_clone: Vec<i32> = ref_items.clone();
   |                                     ^^^^^^^^^^^^^^^^^
   |                                     |
   |                                     expected struct `std::vec::Vec`, found &[i32]
   |                                     help: try using a conversion method: `ref_items.to_vec()`
   |
   = note: expected type `&[i32]`
              found type `std::vec::Vec<i32>`

error[E0308]: mismatched types
  --> $DIR/issue-53692.rs:11:30
   |
LL |         let string: String = s.clone();
   |                              ^^^^^^^^^
   |                              |
   |                              expected struct `std::string::String`, found &str
   |                              help: try using a conversion method: `s.to_string()`
   |
   = note: expected type `&str`
              found type `std::string::String`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
